Downgrade Java version to 8
- Downgraded the Java version from 11 to 8.
- Added XMLResourceBundle to support UTF-8 language string file.
- Changed the language_ko.properties to xml format.